apps/external/lidarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.28
  ports:
    - name: http
      port: 8686
      targetPort: 8686
