apps/external/lidarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.joejad.com`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
